--- a/index.html
+++ b/index.html
@@ -63,19 +63,19 @@
         <!-- Carousel Content -->
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="./5.jpg" class="d-block w-100" alt="...">
+            <img src="5.jpg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="./2.jpg" class="d-block w-100" alt="...">
+            <img src="2.jpg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="./1.jpg" class="d-block w-100" alt="...">
+            <img src="1.jpg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="./4.jpg" class="d-block w-100" alt="...">
+            <img src="4.jpg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="./3.jpg" class="d-block w-100" alt="...">
+            <img src="3.jpg" class="d-block w-100" alt="...">
           </div>
 
 
