--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
     <div class="container">
         <div class="row my-2 r">
             <div class="card mg" style="width: 18rem;">
-                <img class="card-img-top img-fluid" src="/106873233-feasibility-icon-vector-isolated-on-white-background-feasibility-transparent-sign.jpg" alt="Card image cap">
+                <img class="card-img-top img-fluid" src="106873233-feasibility-icon-vector-isolated-on-white-background-feasibility-transparent-sign.jpg" alt="Card image cap">
                 <div class="card-body">
                   <h5 class="card-title text-info   ">Feasibility</h5>
                   <p class="card-text  ">Hey you! We are here to find the feasibility of your spectacular idea</p>
@@ -112,7 +112,7 @@
                 </div>
             </div>
             <div class="card" style="width: 18rem;" >
-                <img class="card-img-top img-fluid" src="/Registration.png" alt="Card image cap">
+                <img class="card-img-top img-fluid" src="Registration.png" alt="Card image cap">
                 <div class="card-body">
                   <h5 class="card-title text-info ">Registration</h5>
                   <p class="card-text text-secondary">Provides a platform to register your idea and connect with clients</p>
@@ -120,7 +120,7 @@
                 </div>
             </div>
             <div class="card" style="width: 18rem;" >
-                <img class="card-img-top img-fluid" src="/Monitoring.jpg" alt="Card image cap">
+                <img class="card-img-top img-fluid" src="Monitoring.jpg" alt="Card image cap">
                 <div class="card-body">
                   <h5 class="card-title text-info ">Monitoring</h5>
                   <p class="card-text text-secondary">Admin can monitor the clients and the users as well.</p>
@@ -151,7 +151,7 @@
 
     <div class="my-3 ">
     <button type="button" class="btn btn-primary" >Request Invite</button>
-    <img src="/image only.png" alt="" height="auto" width="120px" ">
+    <img src="image only.png" alt="" height="auto" width="120px" ">
 
 </div>
 
