--- a/index.html
+++ b/index.html
@@ -40,7 +40,12 @@
               <li class="nav-item">
                 <a class="nav-link" href="#">Know More </a>
               </li>
-              
+              <li class="nav-item">
+                <a class="nav-link" href="#">Login </a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">SignUp</a>
+              </li>
         
             </ul>
           </div>
