--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <!-- NavBar -->
     <nav class="navbar navbar-expand-md fixed-top navbar-light bg-light navbar-custom">
         <div class="container">
-          <a class="navbar-brand" href="#"><img src="/Buffett logo2 nobg.png" alt="" width="160px" height="50px"></a>
+          <a class="navbar-brand" href="#"><img src="Buffett logo2 nobg.png" alt="" width="160px" height="50px"></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -111,7 +111,7 @@
             <div class="card mg" style="width: 18rem;">
                 <img class="card-img-top img-fluid" src="106873233-feasibility-icon-vector-isolated-on-white-background-feasibility-transparent-sign.jpg" alt="Card image cap">
                 <div class="card-body">
-                  <h5 class="card-title text-info   ">Feasibility</h5>
+                  <h5 class="card-title text-info">Feasibility</h5>
                   <p class="card-text  ">Hey you! We are here to find the feasibility of your spectacular idea</p>
                   
                 </div>
@@ -119,7 +119,7 @@
             <div class="card" style="width: 18rem;" >
                 <img class="card-img-top img-fluid" src="Registration.png" alt="Card image cap">
                 <div class="card-body">
-                  <h5 class="card-title text-info ">Registration</h5>
+                  <h5 class="card-title text-info">Registration</h5>
                   <p class="card-text text-secondary">Provides a platform to register your idea and connect with clients</p>
                   
                 </div>
